fix speciesviewer not showing up in prod

--- a/src/game/screens/OverWorldScreen.scss
+++ b/src/game/screens/OverWorldScreen.scss
@@ -69,7 +69,6 @@
 }
 
 .species-viewer-modal {
-  position: absolute;
   top: 40px;
   bottom: 40px;
   left: 40px;
