--- a/src/game/ui/SpeciesViewer/SpeciesViewer.scss
+++ b/src/game/ui/SpeciesViewer/SpeciesViewer.scss
@@ -133,7 +133,7 @@
     @include droppable();
     border-radius: 2px;
     display: flex;
-    min-height: 100px;
+    height: 150px;
     .gene {
       margin: 10px;
     }
